--- a/css/retangulo.css
+++ b/css/retangulo.css
@@ -1,24 +1,25 @@
 .retangulo {
     width: 220pt;
-    height: 270pt;
+    height: 240pt;
 }
 
 .retangulo-float figure:first-child { 
-    background-image: url('../midia/eu.jpeg');
+    background-image: url('../midia/eu.jpg');
     background-position: center;
     background-size: cover;
     opacity: 0.9;
     position: relative; 
-    border: 1px solid #3D7B80;
+    margin: auto;
 }
 
 .retangulo-float div:last-child {
     position: relative;
     background-color: #fff;
-    border: 1px solid black;
-    opacity: 0.9;
-    margin-top: -150px;
-    margin-left: 175px;
+    border: 1px solid #000;
+    opacity: 0.7;
+    margin: auto;
+    margin-top: -50%;
+    margin-left: -10%;
     display: flex;
 }
 
