--- a/css/retangulo.css
+++ b/css/retangulo.css
@@ -1,9 +1,6 @@
-.retangulo {
+.retangulo-float figure:first-child { 
     width: 220pt;
     height: 240pt;
-}
-
-.retangulo-float figure:first-child { 
     background-image: url('../midia/eu.jpg');
     background-position: center;
     background-size: cover;
@@ -13,13 +10,14 @@
 }
 
 .retangulo-float div:last-child {
+    width: 280pt;
+    height: 100pt;
     position: relative;
     background-color: #fff;
     border: 1px solid #000;
-    opacity: 0.7;
+    opacity: 0.8;
     margin: auto;
-    margin-top: -50%;
-    margin-left: -10%;
+    margin-top: -15%;
     display: flex;
 }
 
@@ -40,10 +38,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.icones-linguagens i {
     font-size: 60pt;
 }
 
 .icones-linguagens span {
-    margin-right: 3px;
+    font-size: 12pt;
+}
+
+.icones-linguagens span {
+    margin: 3px;
     padding: 3px;
 }
