--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,12 @@ p {
         transform: rotate(20deg);
     }
 }
+
+#renderizando {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    background-color: #fff;
+    position: absolute;
+    z-index: 9999;
+}
